<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="org.csystem.android.app.veterinarian.viewmodel.VeterinarianSaveActivityViewModel"/>
        <import type="com.karandev.util.databinding.converter.LongStringConverter"/>
        <variable name="viewModel" type="VeterinarianSaveActivityViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".VeterinarianSaveActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/edittext_diploma_no_hint"
            android:text="@={LongStringConverter.INSTANCE.toStr(viewModel.veterinarianSave.diplomaNo)}"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/edittext_citizen_id_hint"
            android:text="@={viewModel.veterinarianSave.citizenId}"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edittext_first_name_hint"
            android:text="@={viewModel.veterinarianSave.firstName}"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edittext_middle_name_hint"
            android:text="@={viewModel.veterinarianSave.middleName}"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edittext_last_name_hint"
            android:text="@={viewModel.veterinarianSave.lastName}"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/edittext_birth_date_hint"
            android:text="@={viewModel.veterinarianSave.birthDate}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleSaveButton()}"
            android:text="@string/button_save_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleExitButton()}"
            android:text="@string/button_exit_text" />
    </LinearLayout>
</layout>

