<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <import type="org.csystem.android.app.veterinarian.viewmodel.VeterinarianInfoActivityViewModel"/>
        <variable name="viewModel" type="VeterinarianInfoActivityViewModel" />
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".VeterinarianInfoActivity">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleCountButton()}"
            android:text="@string/button_count_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleFindByLastNameButton()}"
            android:text="@string/button_find_by_last_name_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleExitButton()}"
            android:text="@string/button_exit_text" />
    </LinearLayout>
</layout>
