<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="org.csystem.android.app.veterinarian.viewmodel.VeterinarianFindByLastNameActivityViewModel"/>
        <variable name="viewModel" type="VeterinarianFindByLastNameActivityViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".VeterinarianFindByLastNameActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewModel.text}" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.offline}"
            android:text="@string/switch_offline_text"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleFindButton()}"
            android:text="@string/button_search_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleExitButton()}"
            android:text="@string/button_exit_text" />

        <ListView
            android:id="@+id/veterinarianFindByLastNameActivityVeterinarians"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adapter="@{viewModel.adapter}" />
    </LinearLayout>
</layout>
